--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </main>
 
     <footer>
-        <a href="https://github.com/rodolfo-ruiz" target="_blank"><img src="assets/github.png" alt="GitHub" style="width: 24px;"></a>
+        <a href="https://github.com/rodolforuiz1805" target="_blank"><img src="assets/github.png" alt="GitHub" style="width: 24px;"></a>
         <p>Desarrollado por Rodolfo Ruiz</p>
     </footer>
 
